Added all possible parameters. Fixed README.